fix(theme): fix list items with overflow

--- a/themes/edjopato-hugo-theme/assets/style/single.scss
+++ b/themes/edjopato-hugo-theme/assets/style/single.scss
@@ -13,10 +13,6 @@
     max-width: 600px;
   }
 
-  * {
-    overflow-x: auto;
-  }
-
   img {
     max-width: 100%;
     display: block;
